Styling. Fixed asset gem loading.
Strange bootstrap default for help blocks, hard to see what the text
belongs to.

Seems they are needed for ad-hoc compilation too.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,3 +27,8 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.help-block {
+  font-size: 12px;
+  margin-top: -7px;
+}
